--- a/design-html/index.html
+++ b/design-html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="usuario">
-                <img src="/Jhampier.jpg" alt="">
+                <img src="img/Jhampier.jpg" alt="">
                 <div class="info-usuario">
                     <div class="nombre-email">
                         <span class="nombre">Jhampier</span>
@@ -187,7 +187,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
