Refactoriza main.js y se corrige el botón Dark Mode

--- a/design-html/index.html
+++ b/design-html/index.html
@@ -83,9 +83,7 @@
                 </div>
                 <div class="switch">
                     <div class="base">
-                        <div class="circulo">
-
-                        </div>
+                        <div class="circulo"></div>
                     </div>
                 </div>
             </div>
