Retoques de diseño HTML y paleta de colores de RGB a HEX

--- a/design-html/index.html
+++ b/design-html/index.html
@@ -17,8 +17,8 @@
     <div class="barra-lateral">
         <div>
             <div class="nombre-pagina">
-                <ion-icon id="cloud" name="cloud-outline"></ion-icon>
-                <span>Apex</span>
+                <ion-icon id="logo" name="logo-firefox"></ion-icon>
+                <span>APEX</span>
             </div>
             <button class="boton">
                 <ion-icon name="add-outline"></ion-icon>
