Mejoras en el css y diseño

--- a/design-html/index.html
+++ b/design-html/index.html
@@ -89,11 +89,11 @@
             </div>
 
             <div class="usuario">
-                <img src="img/Jhampier.jpg" alt="">
+                <img src="img/avatar-user-x640.jpg" alt="">
                 <div class="info-usuario">
                     <div class="nombre-email">
-                        <span class="nombre">Jhampier</span>
-                        <span class="email">jhampier@gmail.com</span>
+                        <span class="nombre">User</span>
+                        <span class="email">user@mail.com</span>
                     </div>
                     <ion-icon name="ellipsis-vertical-outline"></ion-icon>
                 </div>
@@ -105,7 +105,8 @@
 
     <main>
         <h1>Contenido</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure nam aliquid debitis voluptatum
+        <p style="background-color: aqua;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure nam
+            aliquid debitis voluptatum
             reiciendis reprehenderit minus, et sed hic suscipit facilis enim totam. Nesciunt eveniet velit modi
             voluptates temporibus?</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti iure nam aliquid debitis voluptatum
